--- a/index5.html
+++ b/index5.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-    <h1>Hello W</h1>
+    <h1>Hello World</h1>
     <p>This is the first file in my new Git Repo</p>
     <h3>hobnobs</h3>
     <p>tasty and delicious</p>
